# bytepet-cli

./: .gitignore  .npmignore  LICENSE  README.md  package.json  pyproject.toml
bytepet_cli/: __init__.py  main.py
bytepet_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bytepet_cli/js/lib/: pets.js  state.js
lib/: rps.js
video/: package-lock.json  package.json  tsconfig.json
video/src/: BytepetVideo.tsx  Root.tsx
video/src/components/: AsciiPet.tsx  SceneActions.tsx  SceneIntro.tsx  SceneMoods.tsx  SceneOutro.tsx  SceneReveal.tsx  StatBar.tsx  TerminalWindow.tsx  Typewriter.tsx  constants.ts
