[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bytepet-cli"
version = "0.1.0"
description = "⚡ A terminal pet that lives in your CLI — feed it, play with it, watch it grow"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.8"
keywords = ["cli", "pet", "tamagotchi", "terminal", "ascii", "fun", "game", "developer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
]

[project.scripts]
bytepet = "bytepet_cli.main:main"

[project.urls]
Homepage = "https://github.com/muhtalhakhan/bytepet-cli"
Repository = "https://github.com/muhtalhakhan/bytepet-cli"
Issues = "https://github.com/muhtalhakhan/bytepet-cli/issues"
